force-app/main/default/objects/VacancyApplied__c/VacancyApplied__c.object-meta.xml
<CustomObject>
    <label>VacancyApplied</label>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>VacancyApplied Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VacancyAppiled</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>