force-app/main/default/objects/VacancyApplied__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VacancyAppiled</relationshipLabel>
    <relationshipName>VacancyAppiled</relationshipName>
    <type>Lookup</type>
</CustomField>