force-app/main/default/objects/VacancyApplied__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Position__c.CloseDate__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Position__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>VacancyAppiled</relationshipLabel>
    <relationshipName>VacancyAppiled</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>